Fixing the weird scrolling UI bug in Mobile Safari. Tightening up spacing of icons.

--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -21,13 +21,12 @@ html,
 body {
   margin: 0;
   padding: 0;
-  height: 100%;
-  width: 100%;
+  height: 100vh;
+  height: 100dvh;
 }
 
 body.modal-open {
   overflow: hidden;
-  position: fixed;
-  width: 100%;
-  height: 100%;
+  /* Leaving the following line just in case we need it for debugging iOS Mobile Safari scrolling issues */
+  /* position: fixed; */
 }
